@@ -1,6 +1,9 @@
 
 4.1.2 - ie refresh in progress
 
+* config
+  slowly moving all config to a hash which is stored as a tsv
+
 * filter regex
   now users quotemeta
   swapped to clear flag named $FILTER_REGEX
